tests/suite/fail/regression/reg_if_type_mismatch.ny
fn main() {
    let x = if true { 1 } else { "x" } //~ ERROR If expression branches
}
